--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -121,7 +121,7 @@ Risk difference | Probability
 
 Plotting the individual probabilities against the risk difference yields an interesting picture:
 
-```{r, fig.dim=c(8, 5)}
+```{r plot_driskdiffs, fig.dim=c(8, 5)}
 rds <- c(c(12, 9, 8, 6, 5, 4, 3, 2, 1)/(-12), c(0, 1, 2, 3, 4, 5, 6, 8, 9, 12)/12)
 probs <- c(0.0065,0.0111, 0.0454, 0.0071, 0.0778, 0.1059, 0.0020, 0.0500, 
            0.1815, 0.0826, 0.0142, 0.1167, 0.1412, 0.0015, 0.0333, 0.0908, 
@@ -140,7 +140,7 @@ With the assumed moderate success probability of $0.3$, neither of these events 
 Under $H_0$, the most likely risk difference to be observed is -1/12, with a probability of $0.1815$.
 We may also investigate the cumulative risk difference distribution under $H_0$ by simply using the cumulative sum of the probabilities:
 
-```{r, fig.dim = c(8, 5)}
+```{r plot_priskdiffs, fig.dim = c(8, 5)}
 cumProbs <- cumsum(probs)
 
 plot(rds, cumProbs, xlab = "Risk difference", ylab = "Cumulative Probability", 
@@ -153,7 +153,7 @@ abline(h = 0.95, col = "blue", lty = 2)
 
 As illustrated by the red lines, the risk difference 0 clearly does not constitute the centre of the distribution, as the probability to observe a risk difference of at most 0 exceeds 0.5, which would be expected for a symmetric distribution.
 
-```{r}
+```{r output_priskdiffs}
 rds[10]
 cumProbs[10]
 ```
@@ -163,7 +163,7 @@ We use $\alpha=0.05$ for illustration.
 Note that for the comparison, we must subtract the concrete probabilities of achieving the specific risk difference to maintain the $\alpha$ level.
 In the plot above, the blue horizontal line indicates the cumulative probability of 0.95.
 
-```{r}
+```{r rejection_tIe_1}
 alpha <- 0.05
 rejectData <- data.frame(riskDifference = rds, cumulativeProbability = cumProbs,
                          probGeq = 1 - cumProbs + probs,
@@ -178,7 +178,7 @@ The true type I error rate of this test is thus $0.0324$ and the resulting test 
 
 We may simulate:
 
-```{r}
+```{r simulation_tIe_1}
 nSims <- 1000000
 
 successTreatment <- rbinom(nSims, 4, 0.3)
@@ -197,7 +197,7 @@ The simulated and theoretical type I error rates are in good agreement.
 We will now attempt a power calculation and simulation for the same group sizes, but assuming the event rates $\pi_t = 0.6$ and $\pi_c = 0.3$.
 The `priskdiff()` and `driskdiff()` functions from the `riskdiff` facilitate the calculation and `plotriskdiff()` visualises the result:
 
-```{r, fig.dim = c(8,5)}
+```{r plot_priskdiff_power, fig.dim = c(8,5)}
 probs <- riskdiff::driskdiff(nTreatment = 4, nControl = 3, piTreatment = 0.6, piControl = 0.3)
 cumProbs <- riskdiff::priskdiff(nTreatment = 4, nControl = 3, piTreatment = 0.6, piControl = 0.3)
 cumProbs
@@ -208,7 +208,7 @@ From above, we learned that our test rejects for risk differences of 0.66 or gre
 We will generally use the "truly greater than" rejection rule rather than the "greater or equal" rule to avoid possible numerical inaccuracies.
 We may now calculate the power of our test for this situation:
 
-```{r}
+```{r rejection_power_1}
 rejectData <- cbind(cumProbs, probGeq = 1 - cumProbs[,2] + probs[,2])
 rejectData
 ```
@@ -217,7 +217,7 @@ According to this calculation, the probability of reaching or exceeding a risk d
 
 We may simulate:
 
-```{r}
+```{r simulation_power_1}
 successTreatment <- rbinom(nSims, 4, 0.6)
 successControl <- rbinom(nSims, 3, 0.3)
 
@@ -232,7 +232,7 @@ Again, the simulated and theoretical power rates are almost identical.
 
 We can compare this power value to that of Fisher's exact test:
 
-```{r}
+```{r simulation_fisher}
 fisherReject <- numeric(1e4) # Using fewer iterations
 
 for(i in 1:length(fisherReject)) {
@@ -258,7 +258,7 @@ We will assume a control rate of $\pi_c = 0.2$ and use the null hypothesis $H_0:
 
 Calculating the distribution of the risk difference under $H_0$ is more computationally challenging now, since there are far more possible risk differences:
 
-```{r}
+```{r plot_priskdiff_2}
 probs <- riskdiff::driskdiff(nTreatment = 38, nControl = 23, piTreatment = 0.2, piControl = 0.2)
 riskdiff::plotriskdiff(probs)
 
@@ -269,7 +269,7 @@ riskdiff::plotriskdiff(cumProbs)
 The risk difference plots are now messier, but hint at a roughly symmetric distribution around 0.
 Formulating a statistical test can be done in the same manner as before:
 
-```{r}
+```{r rejection_tIe_2}
 rejectData <- cbind("Risk difference" = cumProbs[,1], 
                     "Cumulative probability" = cumProbs[,2],
                     probGeq = 1 - cumProbs[,2] + probs[,2],
@@ -284,7 +284,7 @@ The true type I error rate of this test is $0.0493$, which is much closer to the
 
 We may again simulate the type I error rate of this trial:
 
-```{r}
+```{r, simulation_tIe_2}
 successTreatment <- rbinom(nSims, 38, 0.2)
 successControl <- rbinom(nSims, 23, 0.2)
 
@@ -298,7 +298,7 @@ The simulated and theoretical type I error rates are in good agreement.
 
 For a power simulation, we will consider the point alternative $\pi_t = 0.4$ and $\pi_c = 0.2$:
 
-```{r}
+```{r rejection_power_2}
 probs <- riskdiff::driskdiff(nTreatment = 38, nControl = 23, piTreatment = 0.4, piControl = 0.2)
 cumProbs <- riskdiff::priskdiff(nTreatment = 38, nControl = 23, piTreatment = 0.4, piControl = 0.2)
 
@@ -315,7 +315,7 @@ The theoretical power for this test given the scenario is 0.606.
 
 We simulate:
 
-```{r}
+```{r simulation_power_2}
 successTreatment <- rbinom(nSims, 38, 0.4)
 successControl <- rbinom(nSims, 23, 0.2)
 
@@ -329,7 +329,7 @@ Again, the simulated power is almost identical to the theoretical power.
 
 An interesting (yet suspicious) observation is that this power is remarkably larger than the one achieved by working with a normal approximation, for example the one implemented in the `rpact` package:
 
-```{r}
+```{r calculation_normal_2}
 powerRates <- rpact::getPowerRates(
   pi1 = 0.4, pi2 = 0.2, maxNumberOfSubjects = 38+23, allocationRatioPlanned = 38/23,
   alpha = 0.05
@@ -341,7 +341,7 @@ summary(powerRates)
 Perhaps this stems from an inaccuracy of the normal approximation in this case, as especially the control group has a small sample size and small event rate.
 
 We may compare the two tests for different treatment success rates:
-```{r, cache = TRUE}
+```{r comparison_2, cache = TRUE}
 piTreatment <- seq(0.2, 0.4, 0.01)
 powerERD <- numeric(length(piTreatment))
 
@@ -364,14 +364,14 @@ powerRpact <- rpact::getPowerRates(
 ```
 
 
-```{r}
+```{r plot_comparison_2}
 ggplot2::ggplot(data.frame(piTreatment = piTreatment, powerERD = powerERD, powerRpact = powerRpact)) +
   ggplot2::geom_line(ggplot2::aes(x = piTreatment, y = powerERD), col = "blue") +
   ggplot2::geom_line(ggplot2::aes(x = piTreatment, y = powerRpact), col = "red") +
   ggplot2::labs(x = "Treatment success rate", y = "Power", title = "Power of exact risk difference test and normal approximation")
 ```
 
-```{r}
+```{r summary_comparison_2}
 powerERD - powerRpact
 summary(powerERD - powerRpact)
 ```
@@ -385,14 +385,14 @@ This advantage becomes remarkable for large effect sizes.
 When entering the territory of large sample sizes, the normal approximation becomes more accurate.
 Consider a trial with 200 patients each in the treatment and control group and event rates of 0.2 under $H_0$.
 
-```{r}
+```{r calculation_3}
 probs <- riskdiff::driskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.2, piControl = 0.2)
 cumProbs <- riskdiff::priskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.2, piControl = 0.2)
 ```
 
 The exact risk difference test at $\alpha = 0.05$ proposes the following rejection region:
 
-```{r}
+```{r rejection_tIe_3}
 rejectData <- cbind("Risk difference" = cumProbs[,1], 
                     "Cumulative probability" = cumProbs[,2],
                     probGeq = 1 - cumProbs[,2] + probs[,2],
@@ -406,7 +406,7 @@ rejectData[213:217,]
 
 Power calculation for the point alternative $\pi_t = 0.4$ and $\pi_c = 0.2$ yields:
 
-```{r}
+```{r rejection_power_3}
 probs <- riskdiff::driskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.4, piControl = 0.2)
 cumProbs <- riskdiff::priskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.4, piControl = 0.2)
 
@@ -418,7 +418,7 @@ rejectData[c(213:217, length(rejectData[,1])),]
 ```
 
 Comparing to the normal approximation:
-```{r}
+```{r calculation_normal_3}
 rpact::getPowerRates(
   pi1 = 0.4, pi2 = 0.2, maxNumberOfSubjects = 200+200, 
   allocationRatioPlanned = 1, alpha = 0.05
@@ -431,7 +431,7 @@ Notably, the efficacy boundary on the treatment scale of the `rpact` output is i
 
 Using a slightly smaller alternative effect size of $\pi_t = 0.3$ and $\pi_c = 0.2$:
 
-```{r}
+```{r rejection_power_4}
 probs <- riskdiff::driskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.3, piControl = 0.2)
 cumProbs <- riskdiff::priskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.3, piControl = 0.2)
 
@@ -443,7 +443,7 @@ rejectData[213:217,]
 ```
 
 Comparing to the normal approximation:
-```{r}
+```{r calculation_normal_4}
 rpact::getPowerRates(
   pi1 = 0.3, pi2 = 0.2, maxNumberOfSubjects = 200+200, 
   allocationRatioPlanned = 1, alpha = 0.05
@@ -453,7 +453,7 @@ rpact::getPowerRates(
 In this case, the additional power that the exact risk difference provides is already considerable.
 Moving to an even smaller effect size of $\pi_t = 0.25$ and $\pi_c = 0.2$:
 
-```{r}
+```{r rejection_power_5}
 probs <- riskdiff::driskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.25, piControl = 0.2)
 cumProbs <- riskdiff::priskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.25, piControl = 0.2)
 
@@ -467,7 +467,7 @@ rejectData[213:217,]
 
 Comparing to the normal approximation:
 
-```{r}
+```{r calculation_normal_5}
 rpact::getPowerRates(
   pi1 = 0.25, pi2 = 0.2, maxNumberOfSubjects = 200+200, 
   allocationRatioPlanned = 1, alpha = 0.05
@@ -478,7 +478,7 @@ The power difference is now less pronounced, but still favours the exact risk di
 
 Comparing the power of the exact risk difference test and the normal approximation for different treatment success rates:
 
-```{r, cache = TRUE}
+```{r comparison_5, cache = TRUE}
 piTreatment <- seq(0.2, 0.4, 0.01)
 powerERD <- numeric(length(piTreatment))
 
@@ -501,14 +501,14 @@ powerRpact <- rpact::getPowerRates(
 ```
 
 
-```{r}
+```{r plot_comparison_5}
 ggplot2::ggplot(data.frame(piTreatment = piTreatment, powerERD = powerERD, powerRpact = powerRpact)) +
   ggplot2::geom_line(ggplot2::aes(x = piTreatment, y = powerERD), col = "blue") +
   ggplot2::geom_line(ggplot2::aes(x = piTreatment, y = powerRpact), col = "red") +
   ggplot2::labs(x = "Treatment success rate", y = "Power", title = "Power of exact risk difference test and normal approximation")
 ```
 
-```{r}
+```{r summary_comparison_5}
 powerERD - powerRpact
 summary(powerERD - powerRpact)
 ```
@@ -516,3 +516,55 @@ summary(powerERD - powerRpact)
 We note that for small treatment effect differences that are close to or part of the null hypothesis, the exact risk difference offers a slightly smaller power than the normal approximation.
 However, this is to be expected, as the normal approximation can always exhaust the full alpha level, where as the exact risk difference test is slightly overconservative in these cases.
 For larger effect sizes, the exact risk difference test offers a larger power than the normal approximation, but the gains in power are fairly small.
+
+# Extreme conditioning - large and small rates
+
+The normal approximation is usually only accurate for moderate success rates (unless the sample sizes are extraordinarily large).
+To test the performance of the exact risk difference test under extreme conditions, we presume that, for the trial with 200 patients per group, the event rate in the control group is now $\pi_c = 0.01$.
+
+We achieve the rejection region as above:
+
+```{r}
+probs <- riskdiff::driskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.01, piControl = 0.01)
+cumProbs <- riskdiff::priskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.01, piControl = 0.01)
+
+rejectData <- cbind("Risk difference" = cumProbs[,1], 
+                    "Cumulative probability" = cumProbs[,2],
+                    probGeq = 1 - cumProbs[,2] + probs[,2], 
+                    "reject" = 1-cumProbs[, 2] + probs[,2] < alpha)
+
+rejectionRegion <- rejectData[, 4]
+
+# rejectData <- cbind(rejectData,
+                    # "reachToReject" = c(0, diff(rejectionRegion)),
+                    # "exceedToReject" = c(diff(rejectionRegion), 0))
+rejectData[202:207,]
+```
+
+Calculating the corresponding power for success rates of $\pi_t = 0.03$ and $\pi_c = 0.01$:
+
+```{r}
+probs <- riskdiff::driskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.03, piControl = 0.01)
+cumProbs <- riskdiff::priskdiff(nTreatment = 200, nControl = 200, piTreatment = 0.03, piControl = 0.01)
+
+rejectData <- cbind("Risk difference" = cumProbs[,1], 
+                    "Cumulative probability" = cumProbs[,2],
+                    probGeq = 1 - cumProbs[,2] + probs[,2], 
+                    "reject" = rejectionRegion)
+
+rejectData[202:207,]
+```
+
+We get a decent power of 0.56 for the exact risk difference test despite the small success rates.
+
+Comparing this to the normal approximation:
+
+```{r}
+rpact::getPowerRates(
+  pi1 = 0.03, pi2 = 0.01, maxNumberOfSubjects = 200+200, 
+  allocationRatioPlanned = 1, alpha = 0.05
+) |> summary()
+```
+
+The power improvement gained by the exact risk difference test as compared to the normal approximation is substantial.
+However, the normal approximation may not be a solid choice here anyway.
